Sat Apr 16 20:23:48 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added Autodist.

Thu Apr 14 20:25:08 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Handle empty LIST command reply correcttly in server.  Affected
	  file silcd/command_reply.c.

	* Handle empty LIST command reply correctly in client library.
	  The application will now receive one LIST command reply with
	  all arguments set to NULL if there are no channels.  Updated
	  Client Library documentation accordingly.  Affected file
	  lib/silcclient/command_reply.c.

Tue Apr 12 00:02:09 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added channel name string stringprep profile to the protocol
	  and implementation to allow a little free'er channel name
	  strings.  Affected files are lib/silcutil/silcstringprep.[ch].

	* Added silc_channel_name_[check|verify] to check and verify
	  channel name strings.  Affected files are
	  lib/silcutil/silcstrutil.[ch].

	* Added support for the new channel name preparation in client
	  library and server.  Affected files in lib/silcclient and
	  silcd/.

Mon Apr 11 13:40:27 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added the Autodist into the source tree.  It replaces the
	  old ./prepare.  It can be used to create distributions as
	  previously.  See README.CVS and README.DIST.  See
	  distributions in distdir/.

Sun Apr 10 11:30:56 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Make sure query sends at least an error back if nothing
	  more is sent.  Affected file silcd/server_query.c.

Thu Apr  7 14:50:01 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* During query, check if the original command caller goes
	  away.  If it does, stop the query.  Affected file
	  silcd/server_query.c.

	* Check for valid channel creation in JOIN command reply.
	  Affected file lib/silcclient/command_reply.c.

	* Handle the resolver counter in silc_client_get_users_by_channel
	  callback correctly.  Fixed auto-join bug in Gaim.  Affected